修改内容文字 修改header中的小图标

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
-    <link rel="stylesheet" href="css/iconfont.css">
+    <link rel="stylesheet" href="iconfont/iconfont.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/swiper.min.css">
@@ -26,10 +26,10 @@
                 </h1>
                 <div class="headerRight">
                     <ul class="register">
-                        <li><a href="javascript:;">LOG-IN</a></li>
-                        <li><a href="javascript:;">JOIN</a></li>
-                        <li><a href="javascript:;">MYPAGE</a></li>
-                        <li><a href="javascript:;">CART</a></li>
+                        <li><a class="iconfont icon-gerenzhongxin-xuanzhong" href="javascript:;"></a></li>
+                        <li><a class="iconfont icon-zhuce" href="javascript:;"></a></li>
+                        <li><a class="iconfont icon-xianchangren" href="javascript:;"></a></li>
+                        <li><a class="iconfont icon-gouwuche" href="javascript:;"></a></li>
                     </ul>
                     <div class="search_input">
                         <i class="fa fa-search" id="i-advanced-search-i"></i>
@@ -141,14 +141,14 @@
                     </ul>
                 </li>
                 <li class="navItem">
-                    <a href="javascript:;">STORAGE</a>
+                    <a href="javascript:;">BATHROOM</a>
                     <ul class="itemCon">
                         <li class="itemConText">
-                            <a href="javascript:;">sofa</a>
-                            <a href="javascript:;">shoe cabinet</a>
-                            <a href="javascript:;">TV cabinet</a>
-                            <a href="javascript:;">curtain</a>
-                            <a href="javascript:;">ornament</a>
+                            <a href="javascript:;">Bathtub</a>
+                            <a href="javascript:;">Vanity table</a>
+                            <a href="javascript:;">Mat</a>
+                            <a href="javascript:;">Curtain</a>
+                            <a href="javascript:;">Shower</a>
                         </li>
                         <li class="itemConImg">
                             <a href="javascript:;">
@@ -177,11 +177,11 @@
                     <a href="javascript:;">STUDY ROOM</a>
                     <ul class="itemCon">
                         <li class="itemConText">
-                            <a href="javascript:;">sofa</a>
-                            <a href="javascript:;">table</a>
-                            <a href="javascript:;">TV cabinet</a>
-                            <a href="javascript:;">curtain</a>
-                            <a href="javascript:;">ornament</a>
+                            <a href="javascript:;">Bookcase</a>
+                            <a href="javascript:;">Table lamp</a>
+                            <a href="javascript:;">Desk</a>
+                            <a href="javascript:;">Divan</a>
+                            <a href="javascript:;">Cothes rail</a>
                         </li>
                         <li class="itemConImg">
                             <a href="javascript:;">
@@ -292,7 +292,7 @@
                         </a>
                         <ul class="itemDescribe">
                             <li><a href="javascript:;">NORDLI</a></li>
-                            <li>drawer dresser, 63x30 3/4 " (160x78 cm)</li>
+                            <li>drawer dresser<br>63x30 3/4 " (160x78 cm)</li>
                             <li>$299.00</li>
                             <li>
                                 <img src="img/new.txt" alt="">
@@ -305,9 +305,9 @@
                             <img src="img/content2.jpg" alt="">
                         </a>
                         <ul class="itemDescribe">
-                            <li><a href="javascript:;">NORDLI</a></li>
-                            <li>drawer dresser, 63x30 3/4 " (160x78 cm)</li>
-                            <li>$299.00</li>
+                            <li><a href="javascript:;">HEMNES</a></li>
+                            <li>Desk, light brown<br>61x25 5/8 " (155x65 cm)</li>
+                            <li>$249.00</li>
                             <li>
                                 <img src="img/new.txt" alt="">
                                 <img src="img/sale.txt" alt="">
@@ -319,9 +319,9 @@
                             <img src="img/content3.jpg" alt="">
                         </a>
                         <ul class="itemDescribe">
-                            <li><a href="javascript:;">NORDLI</a></li>
-                            <li>drawer dresser, 63x30 3/4 " (160x78 cm)</li>
-                            <li>$299.00</li>
+                            <li><a href="javascript:;">FANBYN</a></li>
+                            <li>Bar stool with backrest<br>29 1/8 " (74 cm)</li>
+                            <li>$79.00</li>
                             <li>
                                 <img src="img/new.txt" alt="">
                                 <img src="img/sale.txt" alt="">
@@ -335,9 +335,9 @@
                             <img src="img/content4.jpg" alt="">
                         </a>
                         <ul class="itemDescribe">
-                            <li><a href="javascript:;">NORDLI</a></li>
-                            <li>drawer dresser, 63x30 3/4 " (160x78 cm)</li>
-                            <li>$299.00</li>
+                            <li><a href="javascript:;">LINNMON / ALEX</a></li>
+                            <li>Table, geometric blue, gray<br>47 1/4x23 5/8 " (120x60 cm)</li>
+                            <li>$399.00</li>
                             <li>
                                 <img src="img/new.txt" alt="">
                                 <img src="img/sale.txt" alt="">
@@ -349,9 +349,9 @@
                             <img src="img/content5.jpg" alt="">
                         </a>
                         <ul class="itemDescribe">
-                            <li><a href="javascript:;">NORDLI</a></li>
-                            <li>drawer dresser, 63x30 3/4 " (160x78 cm)</li>
-                            <li>$299.00</li>
+                            <li><a href="javascript:;">MICKE</a></li>
+                            <li>Desk, black-brown<br>41 3/8x19 5/8 " (105x50 cm)</li>
+                            <li>$369.00</li>
                             <li>
                                 <img src="img/new.txt" alt="">
                                 <img src="img/sale.txt" alt="">
@@ -363,9 +363,9 @@
                             <img src="img/content6.jpg" alt="">
                         </a>
                         <ul class="itemDescribe">
-                            <li><a href="javascript:;">NORDLI</a></li>
-                            <li>drawer dresser, 63x30 3/4 " (160x78 cm)</li>
-                            <li>$299.00</li>
+                            <li><a href="javascript:;">TYSSEDAL</a></li>
+                            <li>Upright Cabinet<br>47 1/4x20 1/8 " (120x51 cm)</li>
+                            <li>$329.00</li>
                             <li>
                                 <img src="img/new.txt" alt="">
                                 <img src="img/sale.txt" alt="">
@@ -392,9 +392,9 @@
                             <img src="img/content7.jpg" alt="">
                         </a>
                         <ul class="itemDescribe">
-                            <li><a href="javascript:;">NORDLI</a></li>
-                            <li>drawer dresser, 63x30 3/4 " (160x78 cm)</li>
-                            <li>$299.00</li>
+                            <li><a href="javascript:;">ASKVOLL</a></li>
+                            <li>2-drawer chest<br>15 3/4x21 5/8 " (40x55 cm)</li>
+                            <li>$69.99</li>
                             <li>
                                 <img src="img/new.txt" alt="">
                                 <img src="img/sale.txt" alt="">
@@ -406,9 +406,9 @@
                             <img src="img/content8.jpg" alt="">
                         </a>
                         <ul class="itemDescribe">
-                            <li><a href="javascript:;">NORDLI</a></li>
-                            <li>drawer dresser, 63x30 3/4 " (160x78 cm)</li>
-                            <li>$299.00</li>
+                            <li><a href="javascript:;">KULLABERG</a></li>
+                            <li>Desk, pine, brown<br>43 1/4x27 1/2 " (110x70 cm)</li>
+                            <li>$599.00</li>
                             <li>
                                 <img src="img/new.txt" alt="">
                                 <img src="img/sale.txt" alt="">
@@ -420,9 +420,9 @@
                             <img src="img/content9.jpg" alt="">
                         </a>
                         <ul class="itemDescribe">
-                            <li><a href="javascript:;">NORDLI</a></li>
-                            <li>drawer dresser, 63x30 3/4 " (160x78 cm)</li>
-                            <li>$299.00</li>
+                            <li><a href="javascript:;">EKTORP</a></li>
+                            <li>Sofa, Nordvalla light gray<br>85 7/8 " (218 cm)</li>
+                            <li>$599.00</li>
                             <li>
                                 <img src="img/new.txt" alt="">
                                 <img src="img/sale.txt" alt="">
@@ -436,9 +436,9 @@
                             <img src="img/content10.jpg" alt="">
                         </a>
                         <ul class="itemDescribe">
-                            <li><a href="javascript:;">NORDLI</a></li>
-                            <li>drawer dresser, 63x30 3/4 " (160x78 cm)</li>
-                            <li>$299.00</li>
+                            <li><a href="javascript:;">BRUSALI</a></li>
+                            <li>TV bench, brown<br>47 1/4x14 1/8x24 3/8 " (120x36x62 cm)</li>
+                            <li>$279.99</li>
                             <li>
                                 <img src="img/new.txt" alt="">
                                 <img src="img/sale.txt" alt="">
@@ -450,9 +450,9 @@
                             <img src="img/content11.jpg" alt="">
                         </a>
                         <ul class="itemDescribe">
-                            <li><a href="javascript:;">NORDLI</a></li>
-                            <li>drawer dresser, 63x30 3/4 " (160x78 cm)</li>
-                            <li>$299.00</li>
+                            <li><a href="javascript:;">EKEDALEN</a></li>
+                            <li>Extendable table, brown<br>47 1/4/70 7/8x31 1/2 " (120/180x80 cm)</li>
+                            <li>$459.00</li>
                             <li>
                                 <img src="img/new.txt" alt="">
                                 <img src="img/sale.txt" alt="">
@@ -464,9 +464,9 @@
                             <img src="img/content12.jpg" alt="">
                         </a>
                         <ul class="itemDescribe">
-                            <li><a href="javascript:;">NORDLI</a></li>
-                            <li>drawer dresser, 63x30 3/4 " (160x78 cm)</li>
-                            <li>$299.00</li>
+                            <li><a href="javascript:;">STEFAN</a></li>
+                            <li>Chair, brown<br>16 7/8 " (43 cm)</li>
+                            <li>$39.99</li>
                             <li>
                                 <img src="img/new.txt" alt="">
                                 <img src="img/sale.txt" alt="">
@@ -564,6 +564,8 @@
                 </div>
             </div>
         </footer>
+        <!--回到顶部-->
+        <div class="toTop"></div>
     </div>
 </body>
 <script src="js/swiper.min.js"></script>
