--- a/myPage.html
+++ b/myPage.html
@@ -171,5 +171,5 @@
     </footer>
   </div>
 </body>
-  <script src="js/myPage/index.js"></script>
+  <script src="js/myPage/myPage.js"></script>
 </html>
