--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
           <h1 class="logo">
             <a href="javascript:;">
-              <img src="img/logo.png" alt="">
+              <img src="img/index/logo.png" alt="">
             </a>
           </h1>
           <div class="headerRight">
@@ -120,7 +120,7 @@
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon8.jpg" alt="">
+                  <img src="img/index/itemcon12.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
