整理文件夹2

--- a/details.html
+++ b/details.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
-    <link rel="stylesheet" href="css/index/iconfont/iconfont.css">
+    <link rel="stylesheet" href="css/details/iconfont/iconfont.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index/index.css">
-    <link rel="stylesheet" href="css/index/swiper.min.css">
-    <link rel="stylesheet" href="css/index/banner.css">
     <link rel="stylesheet" href="css/details/details.css">
 </head>
 <body>
@@ -17,13 +14,13 @@
       <header class="headerWrap">
         <div class="header">
           <div class="headerLeft">
-            <a href="javascript:;"><img src="img/index/facebook.png" alt=""></a>
-            <a href="javascript:;"><img src="img/index/instagram.png" alt=""></a>
-            <a href="javascript:;"><img src="img/index/twitter.png" alt=""></a>
+            <a href="javascript:;"><img src="img/details/index/facebook.png" alt=""></a>
+            <a href="javascript:;"><img src="img/details/index/instagram.png" alt=""></a>
+            <a href="javascript:;"><img src="img/details/index/twitter.png" alt=""></a>
           </div>
           <h1 class="logo">
             <a href="javascript:;">
-              <img src="img/index/logo.png" alt="">
+              <img src="img/details/index/logo.png" alt="">
             </a>
           </h1>
           <div class="headerRight">
@@ -55,21 +52,21 @@
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon1.jpg" alt="">
+                  <img src="img/details/index/itemcon1.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon2.jpg" alt="">
+                  <img src="img/details/index/itemcon2.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon3.jpg" alt="">
+                  <img src="img/details/index/itemcon3.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
@@ -88,21 +85,21 @@
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon4.jpg" alt="">
+                  <img src="img/details/index/itemcon4.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon5.jpg" alt="">
+                  <img src="img/details/index/itemcon5.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon6.jpg" alt="">
+                  <img src="img/details/index/itemcon6.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
@@ -121,21 +118,21 @@
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon12.jpg" alt="">
+                  <img src="img/details/index/itemcon12.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon7.jpg" alt="">
+                  <img src="img/details/index/itemcon7.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon9.jpg" alt="">
+                  <img src="img/details/index/itemcon9.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
@@ -154,21 +151,21 @@
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon10.jpg" alt="">
+                  <img src="img/details/index/itemcon10.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon11.jpg" alt="">
+                  <img src="img/details/index/itemcon11.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon12.jpg" alt="">
+                  <img src="img/details/index/itemcon12.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
@@ -187,21 +184,21 @@
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon5.jpg" alt="">
+                  <img src="img/details/index/itemcon5.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon9.jpg" alt="">
+                  <img src="img/details/index/itemcon9.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
                 <a href="javascript:;">
-                  <img src="img/index/itemcon4.jpg" alt="">
+                  <img src="img/details/index/itemcon4.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
@@ -425,12 +422,12 @@
 
 
 </body>
-<script src="js/index/jquery.min.js"></script>
-<script src="js/index/swiper.min.js"></script>
-<script src="js/index/banner.js"></script>
+<script src="js/details/jquery.min.js"></script>
 
 <!--放大镜的js-->
 <script src="js/details/magnifying_glass.js"></script>
+<script src="js/details/banner.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/details/swiper.min.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
 	// 放大镜
     var liNodes = document.querySelectorAll(".magnifying_Glass > .list > li");
@@ -446,8 +443,6 @@
 
 <script>
   $(function(){
-    /*调用banner的js*/
-    banner();
     /*回到顶部*/
     toTop();
     function toTop(){
