--- a/myPage.html
+++ b/myPage.html
@@ -22,7 +22,7 @@
         </div>
         <h1 class="logo">
           <a href="javascript:;">
-            <img src="img/logo.png" alt="">
+            <img src="img/index/logo.png" alt="">
           </a>
         </h1>
         <div class="headerRight">
@@ -39,9 +39,195 @@
         </div>
       </div>
     </header>
-
-    <!--填充-->
-    <div class="filling"></div>
+    <!--导航-->
+    <nav class="navWrap">
+      <ul class="navList">
+        <li class="navItem">
+          <a class="text" href="javascript:;">LIVING ROOM</a>
+          <ul class="itemCon">
+            <li class="itemConText">
+              <a href="javascript:;">Sofa</a>
+              <a href="javascript:;">Table</a>
+              <a href="javascript:;">TV cabinet</a>
+              <a href="javascript:;">Curtain</a>
+              <a href="javascript:;">Ornament</a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon1.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon2.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon3.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="navItem">
+          <a class="text" href="javascript:;">BED ROOM</a>
+          <ul class="itemCon">
+            <li class="itemConText">
+              <a href="javascript:;">Bed</a>
+              <a href="javascript:;">Drawers</a>
+              <a href="javascript:;">Mattress</a>
+              <a href="javascript:;">Night table</a>
+              <a href="javascript:;">Dressing</a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon4.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon5.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon6.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="navItem">
+          <a class="text" href="javascript:;">KITCHEN</a>
+          <ul class="itemCon">
+            <li class="itemConText">
+              <a href="javascript:;">Cabinet</a>
+              <a href="javascript:;">Cupboard</a>
+              <a href="javascript:;">Dining table</a>
+              <a href="javascript:;">Dish rack</a>
+              <a href="javascript:;">Lighting</a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon12.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon7.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon9.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="navItem">
+          <a class="text" href="javascript:;">BATHROOM</a>
+          <ul class="itemCon">
+            <li class="itemConText">
+              <a href="javascript:;">Bathtub</a>
+              <a href="javascript:;">Vanity table</a>
+              <a href="javascript:;">Mat</a>
+              <a href="javascript:;">Curtain</a>
+              <a href="javascript:;">Shower</a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon10.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon11.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon12.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="navItem">
+          <a class="text" href="javascript:;">STUDY ROOM</a>
+          <ul class="itemCon">
+            <li class="itemConText">
+              <a href="javascript:;">Bookcase</a>
+              <a href="javascript:;">Table lamp</a>
+              <a href="javascript:;">Desk</a>
+              <a href="javascript:;">Divan</a>
+              <a href="javascript:;">Cothes rail</a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon5.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon9.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+            <li class="itemConImg">
+              <a href="javascript:;">
+                <img src="img/index/itemcon4.jpg" alt="">
+                <span>view details</span>
+                <div class="mask"></div>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="navItem navSmall">
+          <a class="text" href="javascript:;">LIFE STYLE</a>
+          <div class="smallList">
+            <a href="">Modern</a>
+            <a href="">Simple</a>
+            <a href="">Country</a>
+            <a href="">American</a>
+            <a href="">Cozy</a>
+          </div>
+        </li>
+        <li class="navItem">
+          <a class="text" href="javascript:;">SERIES</a>
+        </li>
+        <li class="navItem">
+          <a class="text" href="javascript:;">EVENT</a>
+        </li>
+        <li class="navItem">
+          <a class="text" href="javascript:;">COMMUNITY</a>
+        </li>
+      </ul>
+    </nav>
 
     <!--我页-->
     <div class="myWrap">
@@ -169,7 +355,57 @@
         </div>
       </div>
     </footer>
+    <!--回到顶部-->
+    <div class="toTop iconfont icon-huidaodingbu"></div>
+    <!--fixed导航-->
+    <nav class="fixedNavWrap">
+      <div class="fixedNav">
+        <ul class="fixedNavListLeft">
+          <li><a class="iconfont icon-zhuye" href="javascript:;"></a></li>
+          <li><a href="javascript:;">LIVING ROOM</a></li>
+          <li><a href="javascript:;">BED ROOM</a></li>
+          <li><a href="javascript:;">KITCHEN</a></li>
+        </ul>
+        <ul class="fixedNavListMiddle">
+          <li><a href="javascript:;">SERIES</a></li>
+          <li><a href="javascript:;">SALE</a></li>
+        </ul>
+        <ul class="fixedNavListRight">
+          <li><a class="iconfont icon-gerenzhongxin-xuanzhong" href="javascript:;"></a></li>
+          <li><a class="iconfont icon-zhuce" href="javascript:;"></a></li>
+          <li><a class="iconfont icon-gouwuche" href="javascript:;"></a></li>
+        </ul>
+      </div>
+    </nav>
   </div>
 </body>
+  <script src="js/index/jquery.min.js"></script>
   <script src="js/myPage/myPage.js"></script>
+  <script>
+    $(function(){
+      /*调用banner的js*/
+      banner();
+      /*回到顶部*/
+      toTop();
+      function toTop(){
+        var toTop = document.querySelector("#wrap .toTop");
+        toTop.onclick = function () {
+          document.documentElement.scrollTop = 0;
+        }
+      }
+      /*fixedNav*/
+      var fixedNavWrap = document.querySelector("#wrap .fixedNavWrap");
+      var navWrap = document.querySelector("#wrap .navWrap");
+      var headerWrap = document.querySelector("#wrap .headerWrap");
+      var headerH = navWrap.offsetHeight + headerWrap.offsetHeight;
+      $(document).scroll(function(){
+        if($(document).scrollTop()>headerH){
+          $(fixedNavWrap).css({"height" : "40px" , "transition" : ".5s"})
+        }else{
+          $(fixedNavWrap).css({"height" : "0px", "transition" : "0s"})
+        }
+      })
+    });
+
+</script>
 </html>
